--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,7 +14,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'MyMapboxApp' do
+target 'RopeGeo' do
   config = use_native_modules!
 
   use_react_native!(
@@ -23,7 +23,12 @@ target 'MyMapboxApp' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pre_install do |installer|
+    $RNMapboxMaps.pre_install(installer)
+  end
+
   post_install do |installer|
+    $RNMapboxMaps.post_install(installer)
     react_native_post_install(
       installer,
       config[:reactNativePath],
