--- a/ios/RopeGeo.xcodeproj/xcshareddata/xcschemes/RopeGeo.xcscheme
+++ b/ios/RopeGeo.xcodeproj/xcshareddata/xcschemes/RopeGeo.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "MyMapboxApp.app"
-               BlueprintName = "MyMapboxApp"
-               ReferencedContainer = "container:MyMapboxApp.xcodeproj">
+               BuildableName = "RopeGeo.app"
+               BlueprintName = "RopeGeo"
+               ReferencedContainer = "container:RopeGeo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "MyMapboxAppTests.xctest"
-               BlueprintName = "MyMapboxAppTests"
-               ReferencedContainer = "container:MyMapboxApp.xcodeproj">
+               BuildableName = "RopeGeoTests.xctest"
+               BlueprintName = "RopeGeoTests"
+               ReferencedContainer = "container:RopeGeo.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "MyMapboxApp.app"
-            BlueprintName = "MyMapboxApp"
-            ReferencedContainer = "container:MyMapboxApp.xcodeproj">
+            BuildableName = "RopeGeo.app"
+            BlueprintName = "RopeGeo"
+            ReferencedContainer = "container:RopeGeo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "MyMapboxApp.app"
-            BlueprintName = "MyMapboxApp"
-            ReferencedContainer = "container:MyMapboxApp.xcodeproj">
+            BuildableName = "RopeGeo.app"
+            BlueprintName = "RopeGeo"
+            ReferencedContainer = "container:RopeGeo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
