--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MyMapboxApp",
+  "name": "RopeGeo",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,9 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native/new-app-screen": "0.84.0",
+    "@rnmapbox/maps": "^10.2.10",
     "react": "19.2.3",
     "react-native": "0.84.0",
-    "@react-native/new-app-screen": "0.84.0",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
